added pdf to the course

--- a/html/course.html
+++ b/html/course.html
@@ -43,7 +43,7 @@
 <script src="../layout/styles/main.css"></script>
 
 <script>
-    function submit(){
+    function submit() {
         window.location.pathname = '/Project/html/submit.html';
     }
 </script>
@@ -181,7 +181,6 @@
             </div>
 
 
-
             <!-- Assignment -->
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -189,7 +188,7 @@
                         <h4 class="panel-title">Assignments / Submission</h4>
                     </a>
                 </div>
-                <div id="collapse2" class="panel-collapse collapse">
+                <div id="collapse2" class="panel-collapse collapse in">
                     <div class="panel-body">
 
                         <table class="table" style="">
@@ -210,7 +209,7 @@
                                 <td>Putting Machine Learning into practice. 3 part assignment</td>
                                 <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
                                 <td>25%</td>
-                                <td><p>3/07/2017</td>
+                                <td>3/07/2017</td>
                                 <td>
                                     <button class="btn btn-primary" onclick="submit();">Submit</button>
                                 </td>
@@ -221,7 +220,7 @@
                                 <td>Practicing planning and scheduling before the exam. 12 part assignment</td>
                                 <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
                                 <td>15%</td>
-                                <td><p>3/07/2017</td>
+                                <td>3/07/2017</td>
                                 <td>
                                     <button class="btn btn-primary" onclick="submit();">Submit</button>
                                 </td>
@@ -289,6 +288,10 @@
                                 applications). (BE 3(a), 3(c), 3(d), 3(e), 3(f)); (BSc COMP 1, 2, 3, 4).
                             </div>
                         </div>
+
+                        <br>
+                        View the full course pdf here: <a href="#"> <img src="../images/pdf-icon.svg" style="width: 25px; height:25px;"> </a>
+                        <br><br><br>
                     </div>
                 </div>
             </div>
@@ -345,7 +348,8 @@
                                                                             <ul style="padding-left:20px;">
                                                                                 <li style="">352 Cotton, Kelburn
                                                                                 </li>
-                                                                                <li><a href="mailto:Mengjie.Zhang@vuw.ac.nz">Email</a>
+                                                                                <li>
+                                                                                    <a href="mailto:Mengjie.Zhang@vuw.ac.nz">Email</a>
                                                                                 <li>04 4635654</li>
                                                                             </ul>
                                                                         </div>
@@ -417,7 +421,8 @@
                                                                             <ul style="padding-left:20px;">
                                                                                 <li style="">352 Cotton, Kelburn
                                                                                 </li>
-                                                                                <li><a href="mailto:harith.al-sahaf@vuw.ac.nz">Email</a>
+                                                                                <li>
+                                                                                    <a href="mailto:harith.al-sahaf@vuw.ac.nz">Email</a>
                                                                                 <li>04 4635652</li>
                                                                             </ul>
                                                                         </div>
@@ -455,7 +460,8 @@
                                 <a href="#"> <img src="../images/support-icons/bug.jpg" style="width:10vw;"></a>
                             </div>
                             <div class="col-md-4" style="text-align:center;">
-                                <a href="#"> <img src="../images/support-icons/eclipse-help.png" style="width:10vw;"></a>
+                                <a href="#"> <img src="../images/support-icons/eclipse-help.png"
+                                                  style="width:10vw;"></a>
                             </div>
                             <div class="col-md-4" style="text-align:center;">
                                 <a href="#"> <img src="../images/support-icons/tech-notes.png" style="width:10vw;"></a>
