--- a/html/postgrad.html
+++ b/html/postgrad.html
@@ -76,9 +76,11 @@
                                 About
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu drop-down-wrapper">
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="about-engr.html">Engineering</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="about-engr.html">Engineering</a>
+                                </li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="about-compsci.html">Computer Science</a>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="about-compsci.html">Computer
+                                    Science</a>
                                 </li>
                             </ul>
                         </li>
@@ -90,11 +92,14 @@
                                 Study
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu drop-down-wrapper">
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="your-degree.html">Your Degree</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="your-degree.html">Your
+                                    Degree</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="study-areas.html">Study Areas</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="study-areas.html">Study
+                                    Areas</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="postgrad.html">Postgrad</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a
+                                        href="postgrad.html">Postgrad</a></li>
                             </ul>
                         </li>
 
@@ -104,10 +109,12 @@
                                 Careers
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu drop-down-wrapper">
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="potential-careers.html">Potential Careers</a>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="potential-careers.html">Potential
+                                    Careers</a>
                                 </li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="work-exp.html">Work Experience</a>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="work-exp.html">Work
+                                    Experience</a>
                                 </li>
                                 <li role="separator" class="divider"></li>
                                 <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="awards.html">Awards &
@@ -122,23 +129,30 @@
     </div>
 
 
-    <div id="prospective" class="hoc" style="" >
+    <div id="prospective" class="hoc" style="">
         <article class="introtxt" style="margin: 0 auto;">
             <h1 class="heading">Postgraduate Study</h1>
             <p style="font-size:20px; width: 1200px">
-                Engineering and Computer Science are complex and fast moving disciplines, and Victoria is committed to excellence in its teaching and research. Our undergraduate degrees provide an excellent platform for careers in engineering and computer science, but postgraduate study will enable you to explore the full breadth and depth of these dynamic disciplines.
+                Engineering and Computer Science are complex and fast moving disciplines, and Victoria is committed to
+                excellence in its teaching and research. Our undergraduate degrees provide an excellent platform for
+                careers in engineering and computer science, but postgraduate study will enable you to explore the full
+                breadth and depth of these dynamic disciplines.
                 <br><br>
-                Applicants for PhD thesis and Master thesis programmes are advised to discuss their proposed enrolment with a member of the Engineering and Computer Science staff, either in person or by mail/email. Applicants with qualifications not from VUW should bring/include a copy of their transcript and details of courses they have taken.
+                Applicants for PhD thesis and Master thesis programmes are advised to discuss their proposed enrolment
+                with a member of the Engineering and Computer Science staff, either in person or by mail/email.
+                Applicants with qualifications not from VUW should bring/include a copy of their transcript and details
+                of courses they have taken.
                 <br><br>
-               There are more details about all our postgraduate programs in our <a href="http://www.victoria.ac.nz/ecs/study/academic-prospectuses"> postgraduate prospectus</a>.
+                There are more details about all our postgraduate programs in our <a
+                    href="http://www.victoria.ac.nz/ecs/study/academic-prospectuses"> postgraduate prospectus</a>.
             </p>
         </article>
 
     </div>
 
     <div id="body" style="padding:10px 40px 40px 40px;">
-            <hr/>
-        <div class="panel-group" id="accordion">
+        <hr/>
+        <div class="panel-group" id="accordion" style="margin-bottom:50px;">
 
 
             <div class="panel panel-default">
@@ -151,29 +165,33 @@
                     <div class="panel-body">
                         <div class="postgrad">
 
-                        <div class="postgrad-left-text">
-<h1>Postgraduate Diploma in Science</h1>
-                            <p>The Postgraduate Diploma in Science (PGDipSc), which requires 120 points of post-graduate study and can be completed full-time in two trimesters or part-time up to 4 years. As a research project is not compulsory, the PGDipSc will appeal to students wanting a post-graduate course-work qualification. The PGDipSc also provides an opportunity for those students who are not able to meet the entry requirements for the BSc (Hons) or MSc Part 1.</p>
-                        </div>
+                            <div class="postgrad-left-text">
+                                <h1>Postgraduate Diploma in Science</h1>
+                                <p>The Postgraduate Diploma in Science (PGDipSc), which requires 120 points of
+                                    post-graduate study and can be completed full-time in two trimesters or part-time up
+                                    to 4 years. As a research project is not compulsory, the PGDipSc will appeal to
+                                    students wanting a post-graduate course-work qualification. The PGDipSc also
+                                    provides an opportunity for those students who are not able to meet the entry
+                                    requirements for the BSc (Hons) or MSc Part 1.</p>
+                            </div>
                             <div class="postgrad-center-text">
-                                <h2> <strong>Further develop your skills in:</strong></h2>
+                                <h2><strong>Further develop your skills in:</strong></h2>
                                 <strong>
-                                <p style="font-size:20px;">
-                                    - Computer Science
-                                <br>
-                                    - Electronic and Computer Systems Engineering
-                                <br>
-                                    - Computer Graphics
-                                <br>
-                                    - Logic and Computation.
-                                </p>
-                            </strong>
+                                    <p style="font-size:20px;">
+                                        - Computer Science
+                                        <br>
+                                        - Electronic and Computer Systems Engineering
+                                        <br>
+                                        - Computer Graphics
+                                        <br>
+                                        - Logic and Computation.
+                                    </p>
+                                </strong>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
 
 
             <div class="panel panel-default">
@@ -187,20 +205,25 @@
 
                         <div class="postgrad">
                             <h1>Master of Science</h1>
-                        <div class="postgrad-left-text">
+                            <div class="postgrad-left-text">
 
-                            <p>The Master of Science (MSc) is a postgraduate degree with a thesis as a major component. The degree is designed to provide an advanced level of professional competence with research experience. Note that for students who are enrolled part-time, the time limit on the MSc can be extended pro-rata up to a maximum of five years. <br> See the <a href="http://computergraphics.ac.nz/"> Computer Graphics </a>pages for more details on the programmes in Computer Graphics.</p>
-                        </div>
+                                <p>The Master of Science (MSc) is a postgraduate degree with a thesis as a major
+                                    component. The degree is designed to provide an advanced level of professional
+                                    competence with research experience. Note that for students who are enrolled
+                                    part-time, the time limit on the MSc can be extended pro-rata up to a maximum of
+                                    five years. <br> See the <a href="http://computergraphics.ac.nz/"> Computer
+                                        Graphics </a>pages for more details on the programmes in Computer Graphics.</p>
+                            </div>
                             <div class="postgrad-center-text">
-                                <strong><h2> <strong>The School offers three MSc programmes:</strong></h2>
-                                <p style="font-size:20px;">
-                                    - MSc in Computer Science
-                                <br>
-                                    - MSc in Electronic and Computer Systems
-                                <br>
-                                    - MSc in Computer Graphics
-                                </p>
-                            </strong>
+                                <strong><h2><strong>The School offers three MSc programmes:</strong></h2>
+                                    <p style="font-size:20px;">
+                                        - MSc in Computer Science
+                                        <br>
+                                        - MSc in Electronic and Computer Systems
+                                        <br>
+                                        - MSc in Computer Graphics
+                                    </p>
+                                </strong>
                             </div>
                         </div>
 
@@ -220,25 +243,29 @@
 
                         <div class="postgrad">
                             <h1>Master of Engineering Practice</h1>
-                        <div class="postgrad-left-text">
+                            <div class="postgrad-left-text">
 
-                            <p>The Master of Engineering Practice (MEP) is a one-year 180 point Master’s degree, delivered through a combination of course work and project work. It is a graduate programme designed to build on the student’s technical knowledge, gained during their undergraduate degree in Electronic/Computer Systems Engineering or Software Engineering/Computer Science, or equivalent. It will focus on the advanced skills in applying technical knowledge to implement engineering solutions to challenges faced by New Zealand companies and organisations.</p>
-                        </div>
+                                <p>The Master of Engineering Practice (MEP) is a one-year 180 point Master’s degree,
+                                    delivered through a combination of course work and project work. It is a graduate
+                                    programme designed to build on the student’s technical knowledge, gained during
+                                    their undergraduate degree in Electronic/Computer Systems Engineering or Software
+                                    Engineering/Computer Science, or equivalent. It will focus on the advanced skills in
+                                    applying technical knowledge to implement engineering solutions to challenges faced
+                                    by New Zealand companies and organisations.</p>
+                            </div>
                             <div class="postgrad-center-text">
-                               <strong> <p style="font-size:20px;">The programme culminates with a substantial industrial project, frequently based in a local company. Initially, it will have two streams, focussing on Software Engineering and on Computer Electronic and Computer Systems Engineering. The programme will start in trimester 3 of 2016.
+                                <strong><p style="font-size:20px;">The programme culminates with a substantial
+                                    industrial project, frequently based in a local company. Initially, it will have two
+                                    streams, focussing on Software Engineering and on Computer Electronic and Computer
+                                    Systems Engineering. The programme will start in trimester 3 of 2016.
                                 </p></strong>
-                            </strong>
                             </div>
                         </div>
 
                     </div>
                 </div>
             </div>
-
-
-
         </div>
-
     </div>
     <div class="wrapper row5 footer" id="footer">
         <div id="copyright" class="hoc clear">
@@ -273,7 +300,6 @@
     <script src="assets/js/gmaps.js"></script>
     <script src="assets/libs/owl-carousel/owl.carousel.min.js"></script>
     <script src="assets/libs/materialize/js/materialize.min.js"></script>
-    <script src="assets/libs/jwplayer/jwplayer.js"></script>
     <script src="assets/libs/sweetalert/sweet-alert.min.js"></script>
     <script src="assets/js/common.js"></script>
     <script src="assets/js/main.js"></script>
